# browser-harness

./: SKILL.md  daemon.py  pyproject.toml  run.py  text_helpers.py
docs/superpowers/plans/: 2026-04-26-text-helpers.md  2026-04-27-text-helpers-stupid-proof.md
docs/superpowers/specs/: 2026-04-26-text-helpers-design.md  2026-04-27-text-helpers-stupid-proof-design.md
interaction-skills/: text-mode.md
